# agent-trace-viewer

./: .gitignore  LICENSE  README.md  pyproject.toml
agent_trace_viewer/: __init__.py  cli.py  schema.py  viewer.py
agent_trace_viewer/adapters/: __init__.py  anthropic.py  langchain.py  langgraph.py  openai.py  smolagents.py
examples/: README.md  generate_samples.py
examples/sample_traces/: anthropic.html  anthropic.jsonl  langchain.html  langchain.jsonl  langgraph.html  langgraph.jsonl  openai.html  openai.jsonl  smolagents.html  smolagents.jsonl
tests/: test_cli.py  test_schema.py  test_viewer.py
tests/test_adapters/: test_anthropic.py  test_langchain.py  test_langgraph.py  test_openai.py  test_smolagents.py
